<resources>
    <string name="app_name">AvaBuddies</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_image">User image</string>
    <string name="profile">Profile</string>
    <string name="error_users">Could not load users</string>
    <string name="error_tags">Could not load tags</string>
    <string name="error_chats">Could not load chats</string>
    <string name="error_challenges">Could not load challenges</string>
    <string name="send_connection_request">Send connection request</string>
    <string name="cancel_connection_request">Cancel connection request</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="friend_request_send">You have send a request.</string>
    <string name="friend_request_cancel">You have canceled the request.</string>
    <string name="search">Search</string>
    <string name="nearby">Nearby</string>
    <string name="sent_requests">Sent requests</string>
    <string name="received_requests">Received requests</string>
    <string name="errorDeleteUser">Could not delete user</string>
    <string name="locationSharing">I want to share my location</string>
    <string name="profileSharing">I want to share my profile</string>
    <string name="ProfileText">Profile</string>
    <string name="profileGeneral">General</string>
    <string name="profilePrivacy">Privacy</string>
    <string name="profileConnections">Connections</string>
    <string name="profileShowFriends">Friends</string>
    <string name="profileRemoveAccount">remove my account</string>
    <string name="profileActions">Actions</string>
    <string name="profileUpdate">Update</string>
    <string name="error_terms_and_conditions">You need to accept the terms and conditions to use AvaBuddies.</string>
    <string name="update">Update</string>
    <string name="logout">Logout</string>
    <string name="name">Name</string>
    <string name="welcome_to_navabuddies">Welcome to AvaBuddies</string>
    <string name="welcome_to_avabuddies">Welcome to AvaBuddies!</string>
    <string name="before_we_can_create_your_profile_you_have_to_accept_our_terms_and_conditions">Before we can create your profile, you can choose to share your location.</string>
    <string name="i_accept_that_avabuddies_uses_my_location_in_the_background">I accept that AvaBuddies uses my location in the background.</string>
    <string name="i_accept_these_terms_and_conditions">I accept these terms and conditions</string>
    <string name="message_continue">Continue</string>
    <string name="negative_button">NO</string>
    <string name="positive_button">YES</string>
    <string name="confirm_message">Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="login">Login</string>
    <string name="qr">QR</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="friend_request_deny">You have denied the request.</string>
    <string name="permission_title">Permission request</string>
    <string name="qr_invalid">This QR code is invalid.</string>
    <string name="friend_request_accept">You have accepted the request.</string>
    <string name="request_qr_validated">You have validated the request from %s.</string>
    <string name="success">Success</string>
    <string name="validate">Validate</string>
    <string name="qr_code">QR code</string>
    <string name="qr_error_unknown">You have not send a request to this person.</string>
    <string name="qr_error_validated">This friend is already validated.</string>
    <string name="qr_error_accepted">You are already friends.</string>
    <string name="qr_error_received">You shouldn\'t be scanning your own code.</string>
    <string name="profile_tags">Tags</string>
    <string name="tagsFragmentSave">Save tags</string>
    <string name="tagsName">Tags</string>
    <string name="challenges">Challenges</string>

    <string name="action_delete">Delete</string>
    <string name="action_copy">Copy</string>
    <string name="copied_message">Message copied!</string>
    <string name="go_to_chat">Chat</string>
    <string name="hint_enter_a_message">Type a message…</string>
    <string name="start_typing_status">Start typing</string>
    <string name="stop_typing_status">Stop typing</string>
    <string name="chat">Chat</string>
</resources>
