<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.main.MainActivity">
    <item android:id="@+id/btn_qr"
        android:title="@string/qr"
        android:onClick="onClickQR"
        android:icon="@drawable/icon_qr"/>
    <item android:id="@+id/btn_nearby"
        android:title="@string/nearby"
        android:onClick="onClickNearby"
        android:icon="@drawable/icon_nearby"/>
    <item android:id="@+id/btn_search"
        android:title="@string/search"
        android:onClick="onClickSearch"
        android:icon="@drawable/icon_search"/>
    <item android:id="@+id/btn_chat"
        android:title="@string/chat"
        android:onClick="onClickChat"
        android:icon="@drawable/icon_chat"/>
    <item android:id="@+id/btn_profile"
        android:title="@string/profile"
        android:onClick="onClickProfile"
        android:icon="@drawable/icon_person"/>
</menu>