<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.main.profile.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >



            <ImageView
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:minHeight="200dp"
                android:contentDescription="@string/ProfileText"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="#eee"
                android:padding="10dp"
                android:text="@string/profileGeneral"
                android:textColor="@color/colorBlack"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/aboutMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />
            <Switch
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/locationSharing"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/updateProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update" />

            <Button
                android:id="@+id/removeThisUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:text="@string/profileRemoveAccount" />
        </LinearLayout>
    </ScrollView>


</FrameLayout>